--- a/ProjectSelector/res/layout/main.xml
+++ b/ProjectSelector/res/layout/main.xml
@@ -9,5 +9,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello" />
+	
+	<Button
+		android:id="@+id/button_inClass0604"
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+		android:text="@string/text_inClass0604"
+		android:onClick="executeInClass0604" />
 
+	<Button
+		android:id="@+id/button_assignment1"
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+		android:text="@string/text_assignment1"
+		android:onClick="executeAssignment1" />
+	
 </LinearLayout>
