--- a/ProjectSelector/res/layout/main.xml
+++ b/ProjectSelector/res/layout/main.xml
@@ -8,20 +8,32 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="@string/hello" />
 	
 	<Button
-		android:id="@+id/button_inClass0604"
-		android:layout_height="wrap_content"
-		android:layout_width="wrap_content"
-		android:text="@string/text_inClass0604"
-		android:onClick="executeInClass0604" />
+	    android:id="@+id/button_inClass0604"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_weight="1"
+	    android:onClick="executeInClass0604"
+	    android:text="@string/text_inClass0604" />
 
 	<Button
-		android:id="@+id/button_assignment1"
-		android:layout_height="wrap_content"
-		android:layout_width="wrap_content"
-		android:text="@string/text_assignment1"
-		android:onClick="executeAssignment1" />
+	    android:id="@+id/button_assignment1"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_weight="1"
+	    android:onClick="executeAssignment1"
+	    android:text="@string/text_assignment1" />
+
+	<Button
+	    android:id="@+id/assignment2button"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_weight="1"
+	    android:hint="@string/hint_assignment2button"
+	    android:onClick="executeAssignment2"
+	    android:text="@string/text_assignement2button" />
 	
 </LinearLayout>
