--- a/ProjectSelector/res/layout/colorblenderactivity.xml
+++ b/ProjectSelector/res/layout/colorblenderactivity.xml
@@ -40,6 +40,7 @@
         android:id="@+id/colorSeekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="false" />
+        android:clickable="false"
+        android:longClickable="false" />
 
 </LinearLayout>
